# npapi-vlc

./: .gitignore  Makefile.am  NEWS  configure.ac
activex/: Makefile.am  axvlc.idl  axvlc.tlb  axvlc_idl.c  axvlc_idl.h  main.cpp  plugin.cpp  plugin.h  vlccontrol2.cpp  vlccontrol2.h
common/: vlc_player.cpp  vlc_player_options.h  win32_fullscreen.cpp  win32_fullscreen.h
extras/macosx/: Info.plist.in  build-plugin.sh  build-vlc-32.sh  build-vlc.sh  create-dmg.sh  create-universal-binary.sh  dmg_setup.scpt
npapi/: Makefile.am  common.h  events.cpp  events.h  vlcplugin.h  vlcplugin_base.cpp  vlcplugin_base.h  vlcplugin_gtk.cpp  vlcplugin_mac.cpp  vlcplugin_mac.h  vlcplugin_mac.mm  vlcshell.cpp  vlcshell.h  vlcwindowless_X11.cpp  vlcwindowless_X11.h  vlcwindowless_base.cpp  vlcwindowless_base.h  vlcwindowless_mac.cpp  vlcwindowless_mac.h  vlcwindowless_win.cpp
npapi/control/: npolibvlc.cpp  nporuntime.h
npapi/npcontrol/: npmac.cpp
npapi/npruntime/: npolibvlc.cpp  nporuntime.h
npapi/package/: vlc.r.in
npapi/support/: npcommon.cpp  npmac.cpp  npunix.cpp  npwin.cpp
share/test/: simple.html  test.html  windowless.html
